[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Objects/Ring.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Items/Rings/Ring3.png" type="Texture2D" id=2]
[ext_resource path="res://Graphics/Items/Rings/Ring1.png" type="Texture2D" id=3]
[ext_resource path="res://Graphics/Items/Rings/Ring2.png" type="Texture2D" id=4]
[ext_resource path="res://Graphics/Items/Rings/Ring4.png" type="Texture2D" id=5]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
size = Vector2( 6.5, 6.5 )

[node name="Ring" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="RingSprite" type="AnimatedSprite2D" parent="."]
z_index = 4
frames = SubResource( 2 )
frame = 2
playing = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
modulate = Color( 1, 0, 0.819608, 1 )
shape = SubResource( 1 )

[node name="FloorCheck" type="RayCast2D" parent="."]
enabled = true
target_position = Vector2( 0, 8 )

[connection signal="area_shape_entered" from="Hitbox" to="." method="_on_Hitbox_area_shape_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_Hitbox_body_exited"]
